content(code): add new file

--- a/JavaScriptDrumKit/index.html
+++ b/JavaScriptDrumKit/index.html
@@ -45,7 +45,10 @@
       </div>
     </div>
 
-    <audio data-key="65" src="sounds/clap.wav"></audio>
+    <audio
+      data-key="65"
+      src="souns/01 - JavaScript Drum Kit_sounds_clap (1).wav"
+    ></audio>
     <audio data-key="83" src="sounds/hihat.wav"></audio>
     <audio data-key="68" src="sounds/kick.wav"></audio>
     <audio data-key="70" src="sounds/openhat.wav"></audio>
