--- a/typeAhead/typeAhead.html
+++ b/typeAhead/typeAhead.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Type Ahead 👀</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <title>Document</title>
   </head>
   <body>
     <form class="search-form">
@@ -13,5 +15,6 @@
         <li>or a state</li>
       </ul>
     </form>
+    <script src="main.js"></script>
   </body>
 </html>
